# the-io-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  CNAME  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  build.sh  scaffold.yaml  theiolibraryConfig.cmake.in
.changes/: 0.0.1.md
examples/map-reduce/: CMakeLists.txt  DEMO.md  build.sh
examples/map-reduce/src/: dump_files_1.c  dump_files_2.c  dump_files_3.c  dump_files_4.c  dump_files_5.c  dump_files_6.c  dump_files_7.c  list_files.c
examples/recs/: CMakeLists.txt
examples/recs/src/: convert_interactions.c
experimental/: io_data_store.c  io_data_store.h
include/the-io-library/: io.h  io_data_store.h  io_in.h  io_in_base.h  io_log.h  io_out.h
include/the-io-library/src/: io_in.h  io_in_base.h  io_out.h
src/: io.c  io_data_store.c  io_in.c  io_in_base.c  io_log.c  io_out.c
tests/: CMakeLists.txt  README.md  build.sh
tests/src/: test_io.c  test_io_in.c  test_io_out.c
